--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "leaflet": "^1.8.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-leaflet": "^4.0.2"
+  },
+  "devDependencies": {
+    "sass": "^1.54.8"
   }
 }
